--- a/app/src/main/res/layout/activity_full_view_of_the_post.xml
+++ b/app/src/main/res/layout/activity_full_view_of_the_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FullViewOfThePostActivity"
-    android:background="@color/black">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
+        android:layout_marginBottom="90dp"
         android:orientation="vertical">
         <ScrollView
             android:layout_width="match_parent"
@@ -21,9 +22,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="vertical">
-
 
                 <TableLayout
                     android:layout_width="match_parent"
@@ -37,9 +36,7 @@
                             android:layout_height="40dp"
                             android:visibility="visible"
                             android:src="@drawable/screen_content"
-                            android:layout_marginRight="30dp"
-
-                            />
+                            android:layout_marginRight="30dp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -77,6 +74,7 @@
                             android:background="@drawable/customshare_text_view"
                             />
                         <ImageButton
+                            android:onClick="onClickSettingsPost"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:src="@drawable/settings_post"
@@ -131,7 +129,7 @@
                     android:id="@+id/gridViewForVideoFullView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:columnWidth="100dp"
+                    android:columnWidth="110dp"
                     android:numColumns="auto_fit"
                     android:verticalSpacing="10dp"
                     android:horizontalSpacing="10dp"
@@ -156,108 +154,123 @@
                     android:id="@+id/gridViewForPhotoFullView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:columnWidth="100dp"
+                    android:columnWidth="110dp"
                     android:numColumns="auto_fit"
                     android:verticalSpacing="10dp"
                     android:horizontalSpacing="10dp"
                     android:stretchMode="columnWidth"
-                    android:visibility="gone"
+                    android:visibility="visible"
 
                     android:gravity="center">
                 </GridView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:orientation="vertical">
+
+                </LinearLayout>
             </LinearLayout>
+
         </ScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="horizontal">
-            <TableLayout
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:background="@color/black"
-                android:gravity="bottom"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="55dp"
-                android:stretchColumns="*">
-                <TableRow>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
-                            android:src="@drawable/eye" />
-
-                        <TextView
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textColor="@color/white"
-                            android:text="170 views" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:orientation="horizontal"
-                        android:layout_marginLeft="3dp">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
-                            android:src="@drawable/comment_post"
-                            />
-
-                        <TextView
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textColor="@color/white"
-                            android:text="24 comments" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center"
-                        >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
-                            android:src="@drawable/likes_post"
-                            />
-
-                        <TextView
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-
-                            android:textColor="@color/white"
-                            android:text="135 likes" />
-                    </LinearLayout>
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
     </LinearLayout>
+    <android.support.design.widget.BottomNavigationView
+
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:background="#000000"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="53dp"
+        >
+        <TableLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:background="@color/black"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="30dp"
+
+            android:layout_marginRight="30dp"
+            android:stretchColumns="*">
+            <TableRow>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:src="@drawable/eye" />
+
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/white"
+                        android:text="170 views" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="3dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:src="@drawable/comment_post"
+                        />
+
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/white"
+                        android:text="24 comments" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:src="@drawable/likes_post"
+                        />
+
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+
+                        android:textColor="@color/white"
+                        android:text="135 likes" />
+                </LinearLayout>
+            </TableRow>
+        </TableLayout>
+    </android.support.design.widget.BottomNavigationView>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigationFullView"
         android:layout_width="0dp"
