--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -9,7 +9,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="53dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,6 +19,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="30dp"
+
+
             android:orientation="vertical">
 
             <LinearLayout
@@ -191,7 +195,7 @@
                 android:id="@+id/gridViewForVideo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnWidth="90dp"
+                android:columnWidth="110dp"
                 android:numColumns="auto_fit"
                 android:verticalSpacing="10dp"
                 android:horizontalSpacing="10dp"
@@ -215,7 +219,7 @@
                 android:id="@+id/gridViewForPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnWidth="100dp"
+                android:columnWidth="110dp"
                 android:numColumns="auto_fit"
                 android:verticalSpacing="10dp"
                 android:horizontalSpacing="10dp"
@@ -224,8 +228,29 @@
                 android:gravity="center">
             </GridView>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:orientation="vertical">
+
+            </LinearLayout>
         </LinearLayout>
+
+
     </ScrollView>
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigationFullView"
+            android:layout_width="wrap_content"
+        android:layout_height="53dp"
+        android:background="#000000"
+        app:itemIconTint="@animator/bottom_navigation_colors"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_gravity="bottom"
+        app:menu="@menu/navigation">
 
+    </android.support.design.widget.BottomNavigationView>
 </android.support.design.widget.CoordinatorLayout>
