--- a/app/src/main/res/layout/mygrid_layout.xml
+++ b/app/src/main/res/layout/mygrid_layout.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:id="@+id/root"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="150dp">
+    android:layout_width="100dp"
+    android:layout_height="100dp">
 
     <ImageView
         android:id="@+id/img_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
-        android:background="#000"/>
+
+
+        android:background="@drawable/customshare_header"/>
 
     <ImageButton
         android:id="@+id/btn_close"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_gravity="end"
-        android:background="#00000000"
-        android:scaleType="fitXY"
-        android:src="@drawable/add_button"/>
+        android:layout_marginTop="-5dp"
+        android:layout_marginRight="-5dp"
+        android:background="#0000"
+        android:src="@drawable/button_delete_media"/>
+    <TextView
+        android:id="@+id/textTime"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="01:20"
+        android:textColor="@color/white"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:visibility="gone"
+        />
 
 </FrameLayout>
