--- a/app/src/main/res/layout/activity_full_screen_photo.xml
+++ b/app/src/main/res/layout/activity_full_screen_photo.xml
@@ -7,22 +7,9 @@
     android:background="@color/black"
     tools:context=".FullScreenPhoto">
 
-        <LinearLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/photoView"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                </LinearLayout>
-        </LinearLayout>
 </android.support.constraint.ConstraintLayout>
