--- a/app/src/main/res/layout/activity_full_screen_video.xml
+++ b/app/src/main/res/layout/activity_full_screen_video.xml
@@ -7,23 +7,9 @@
     android:background="@color/black"
     tools:context=".FullScreenVideo">
 
-    <LinearLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_video"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <VideoView
-                android:id="@+id/videoViewFullScreen"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
